<resources>
    <string name="app_name">GenericDawawala(User)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="doc_verification">A verification code has been sent to the phone number.
    Please enter the code below.</string>

    <string name="requiredNameField"><font fgcolor='#000000'>NAME</font><font fgcolor='#FF0000'>*</font></string>
    <string name="requiredNumberField"><font fgcolor='#000000'>MOBILE NUMBER</font><font fgcolor='#FF0000'>*</font></string>
    <string name="preparing"><font fgcolor='#4f9f1a'>*</font> Preparing of the Surgery</string>
    <string name="map_key">AIzaSyD8JA1Fm0Jtqyj4kBqlUMB5MMOZkHLGkto</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or" translatable="false">OR</string>
    <string name="register">Register</string>
    <string name="profile_verified">Your profile is\nSuccessfully Verified</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="sure_logout">Are you sure want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="Search_here">SEARCH HERE</string>
    <string name="terms_conditions_for_online_consultations"><![CDATA[I agree to the terms & conditions for online consultations]]></string>

    <string name="facebook_app_id">905332436906178</string>
    <string name="fb_login_protocol_scheme">fb905332436906178</string>
    <string name="no_speciality_found">No Speciality Found</string>
    <string name="search_your_medicine_here">SEARCH YOUR MEDICINE HERE</string>
    <string name="description">description</string>
    <string name="pregnancy_amp"><![CDATA[Pregnancy & amp]]></string>
    <string name="loremtv">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s </string>
    <string name="accept_terms_of_use">I accept the Generic Davawala <u>Terms of Use &amp; Privacy Policy</u></string>
    <string name="terms_of_use">I accept the Generic Davawala <u>Terms of Use &amp; Privacy Policy</u></string>

    <string name="packagedetailstv">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry
        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not
        only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
        of Letraset sheets containing LoremLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the standard dummy
        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting,
        Letraset sheets containing LoremLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the standard dummy
        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem</string>
    <string name="login_using_google_accounts">login using google accounts</string>
    <string name="login_using_facebook_account">login using facebook account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="verification">Verification</string>
    <string name="enter_your_verification_code">Enter your verification Code</string>
    <string name="resend">Resend</string>
    <string name="todo">TODO</string>


    <string-array name="orderTracker">
        <item>Placed</item>
        <item>Dispatched</item>
        <item>On the way</item>
        <item>Delivered</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_wallet">WalletActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="hii_vikas_kumar">Hii Vikas Kumar</string>
    <string name="notification">Notification</string>
    <string name="coupons_offers"><![CDATA[Coupons & Offers]]></string>
    <string name="your_all_coupons_offers_is_here"><![CDATA[Your All Coupons & Offers Is Here]]></string>
    <string name="search_medicines">Search Medicines</string>
    <string name="search_your_medicines">Search Your Medicines</string>
    <string name="track_your_orders">Track Your Orders</string>
    <string name="personal_details">Personal Details</string>
    <string name="your_transaction">Your Transactions</string>
    <string name="asd">Who Is The Patient</string>
    <string name="vikas_gmail_com">Vikas@gmail.com</string>
    <string name="my_online_appointments">My Online Appointments</string>
    <string name="pending">Pending</string>
    <string name="coupon_offers"><![CDATA[Coupon & offers]]></string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="book_now">Book Now</string>
    <string name="mohali">Mohali</string>
    <string name="filters">Filters</string>
    <string name="my_doctor_appointments">My Doctor Appointments</string>
    <string name="are_you_sure_want_to_end_call">Are you sure want to end call?</string>
    <string name="keep_call">Keep Call</string>
    <string name="end_call">End Call</string>
    <string name="book_lab_test">Book Lab Test</string>
    <string name="packages">Packages</string>
    <string name="featured_health_check_up_npackages">Featured Health Check-Up \nPackages</string>
    <string name="view_all">View All</string>
    <string name="lab_center_visit">Lab center visit</string>
    <string name="mb_pack_1_generic_health_wealth_package">Mb Pack 1- Generic health wealth package</string>
    <string name="radiology_included">Radiology Included</string>
    <string name="_12_lab_tests">12 Lab Tests</string>
    <string name="_2_consultations_included">2 Consultations Included</string>
    <string name="book_popular_lab_test">book Popular Lab Test</string>
    <string name="add">Add</string>
    <string name="test_by_conditions">Test By Conditions</string>
    <string name="test_by_organs">Test By Organs</string>
    <string name="radiology">Radiology</string>
    <string name="pathology">Pathology</string>
    <string name="comprehensive_silver_full_body_checkup">Comprehensive Silver Full Body Checkup</string>
    <string name="more_details">+More Details</string>
    <string name="diabetes_screening_2">Diabetes Screening (2)</string>
    <string name="radiology_tests">RadioLogy Tests</string>
    <string name="pathology_tests">Pathology Tests</string>
    <string name="home_sample_collection">Home Sample Collection</string>
    <string name="no_preparation">No Preparation</string>
    <string name="about">
</string>
    <string name="our_lab_technician_will_collect_samples_form_home">- Our Lab Technician will collect samples form home</string>
    <string name="qww">To determine vitamin D deficiency when calcium level is low or a person has symptoms of vitamin D deficiency such as bone malformation in children (rickets) and bone weakness, softness, or fracture in adults (osteomalacia). Before starting therapy for osteoporosis. To monitor the adequacy of treatment in patients who are receiving Vitamin D supplements, calcium, phosphorus, and/ or magnesium supplements. To diagnose/monitor problems with the parathyroid gland functioning since the parathyroid hormone (PTH) is essential for vitamin D activation. To monitor the health status of individuals with diseases that interfere with fat absorption, such as cystic fibrosis and Crohn\'s disease and in patients who have undergone gastric bypass surgery.</string>
    <string name="added_in_cart">Added in cart</string>
    <string name="clinic_laboratory">Clinic Laboratory</string>
    <string name="calcium">Calcium</string>
    <string name="get_report_within_48_hrs">Get report within 48 hrs</string>
    <string name="select_lab">Select Lab</string>
    <string name="vitamin_d_12_oh">Vitamin D (12-OH)</string>
    <string name="add_to_cart">Cart</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="my_prescription">My Prescription</string>
    <string name="_0">0</string>
    <string name="_199">₹ 199</string>
    <string name="terms">Generic Davawala is a technology platform to facilitate transaction of business. The products and services are offered for sale by the sellers. The user authorizes the delivery personel to be his agent for delivery of the goods. For details read terms and conditions.</string>
    <string name="_34_off">34% OFF</string>
    <string name="your_added_tests">Your added tests</string>
    <string name="iso_certified">ISO certified</string>
    <string name="add_patient_address">Add Patient Address</string>
    <string name="locality_area_name">locality, area name</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="sample_collection_details">Sample Collection details</string>
    <string name="patient">Patient:</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="find_health_concern_tests_packages">Find Health Concern Tests/Packages</string>
    <string name="mb_pack_1_n_generic_heath_n_wealth_package">MB Pack 1- \n Generic Heath \n wealth package</string>
    <string name="select_labs">Select Labs</string>
</resources>