<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY"
                    android:src="@drawable/verification" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/registerRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space20"
                android:gravity="center"
                android:visibility="visible">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/space10"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/space10"
                            android:text="@string/verification"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:text="@string/doc_verification"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:text="@string/enter_your_verification_code"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack" />

                        <in.aabhasjindal.otptextview.OtpTextView
                            android:id="@+id/otp_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="@dimen/space20"
                            android:textColor="@color/colorWhite"
                            app:height="42dp"
                            app:length="4"
                            app:otp_box_background="@drawable/blue_circle"
                            app:otp_box_background_active="@drawable/blue_circle"
                            app:otp_text_size="18dp"
                            app:width="42dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="-45dp"
                    android:layout_marginRight="50dp"
                    android:elevation="@dimen/space10">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space5"
                        android:background="@drawable/btn_bg"
                        android:padding="10dp"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/resendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/ripple"
                android:gravity="center"
                android:padding="@dimen/space10"
                android:text="@string/resend"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
