<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.profiles.PdfViewerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space50"
        android:background="@color/appcolor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space10"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space20"
            android:text="@string/my_prescription"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/med_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/space5"
            android:layout_weight="1"
            android:background="@drawable/blue_green_icon_bg"
            android:padding="10dp"
            android:text="@string/order_medicine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lab_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/space5"
            android:layout_weight="1"
            android:background="@drawable/blue_green_icon_bg"
            android:padding="10dp"
            android:text="@string/lab_tests"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>


    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>